[package]
name = "it-would-never-happen-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"

[profile.release]
lto = true
codegen-units = 1
strip = true
